[metadata]
name = NLPWash
version = 0.0.1
author = Hiten Mandaliya
author_email = hitenmandaliya562@gmail.com
description = NLP Package to perform preprocessing on text data in one line
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Hiten-98/NLPWash/tree/main
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src